objects/Bug_Test__c.object
<CustomObject>
    <fields>
        <fullName>Bug_Field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bug Field 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bug_Field_2__c</fullName>
        <label>Bug Field 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bug_Field_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bug Field 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Bug Test</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Bug Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bug Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>